--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 value="vZj37WFQfsAU6PSKYDKHsgLXrUpSBquZulp8JZBvqF2VdUz/he1zCz1qJ9tWg0wc1iKP32hlhx2t4FJC764RCkREft5NYNqQDkYHv8mTXa5D/o5dRNmlXpdFYZOyKQb+"
               />
               <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
-                ПОДАРИ СОБІ ТА СВОЇМ РІДНИМ ТЕПЛО !  
+                <h5>ПОДАРИ СОБІ ТА СВОЇМ РІДНИМ ТЕПЛО ! </h5>
                 Ви можете замовити через форму нижче і ми вам перезвонимо
                 або зателефонувати по телефону 093-272-0796.
               </p>
