--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 value="vZj37WFQfsAU6PSKYDKHsgLXrUpSBquZulp8JZBvqF2VdUz/he1zCz1qJ9tWg0wc1iKP32hlhx2t4FJC764RCkREft5NYNqQDkYHv8mTXa5D/o5dRNmlXpdFYZOyKQb+"
               />
               <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
-                <h5>ПОДАРИ СОБІ ТА СВОЇМ РІДНИМ ТЕПЛО ! </h5>
+                ПОДАРИ СОБІ ТА СВОЇМ РІДНИМ ТЕПЛО ! <br> 
                 Ви можете замовити через форму нижче і ми вам перезвонимо
                 або зателефонувати по телефону 093-272-0796.
               </p>
@@ -718,7 +718,7 @@
                   />
                 </div>
                 <div class="col-auto mbr-section-btn align-center">
-                  <button type="button" class="btn btn-primary display-4" id="sendOrder">
+                  <button type="button" class="btn btn-primary display-4" id="sendOrder" disabled>
                     Я хочу замовити !
                   </button>
                 </div>
