--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
               <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
                 ПОДАРИ СОБІ ТА СВОЇМ РІДНИМ ТЕПЛО ! <br> 
                 Ви можете замовити через форму нижче і ми вам перезвонимо
-                або зателефонувати по телефону 093-272-0796.
+                або зателефонувати по номеру 093-272-0796
               </p>
               <div class="row">
                 <div
